[tool.poetry]
name = "merge-pdf"
version = "1.0"
description = ""
authors = ["azennto <t320033@m.chukyo-u.ac.jp>"]
readme = "README.md"
packages = [{include = "merge_pdf"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
#pypdf = "^3.12.0"
pikepdf = "^7.2.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
