[project]
name = "merge-pdf"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "azennto", email = "t320033@m.chukyo-u.ac.jp" }
]
dependencies = [
    "pikepdf>=9.0.0",
    "keyboard>=0.13.5",
    "tqdm>=4.66.4",
    "pyinstaller>=6.9.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/merge_pdf"]
